--- a/data/monitoring_data/Community_data_processing.Rmd
+++ b/data/monitoring_data/Community_data_processing.Rmd
@@ -674,7 +674,7 @@ deep_reef_counts_wide <- deep_reef_counts_drop %>%
 deep_reef_counts_wide$mpa_class <- tolower(deep_reef_counts_wide$mpa_class)
 
 
-deep_reef_counts_envr <- anti_join(deep_reef_counts_wide, envr_dat, 
+deep_reef_counts_envr <- left_join(deep_reef_counts_wide, envr_dat, 
                                   by=c("year","group",
                                                     "region3","region4",
                                                     "mpa_class"="mpa_class",
@@ -682,8 +682,8 @@ deep_reef_counts_envr <- anti_join(deep_reef_counts_wide, envr_dat,
                                                   "affiliated_mpa"="mpa_name"))
 
 #Export
-#path_aurora <- "/home/shares/ca-mpa/data/sync-data/processed_data/ecological_community_data/year_level" 
-write.csv(deep_reef_counts_wide,file.path(path_aurora, "deep_reef_mpa_year.csv"), row.names = FALSE)
+#path_aurora <- "/home/shares/ca-mpa/data/sync-data/monitoring/processed_data/ecological_community_data/year_level_with_envr_vars" 
+#write.csv(deep_reef_counts_wide,file.path(path_aurora, "deep_reef_mpa_year.csv"), row.names = FALSE)
 
 ```
 
