--- a/analyses/2performance_fisheries/code/matching.Rmd
+++ b/analyses/2performance_fisheries/code/matching.Rmd
@@ -21,59 +21,67 @@ Values of standardized mean differences and eCDF statistics close to zero and va
 # Covariate balance
 m.out0 <- matchit(block_treatment ~ block_area_km2 + block_mean_depth_fa + 
                     distance_to_shore_km + dist_to_port_km,
-                  data = data2, method = NULL, distance = "glm")
+                  data = data3, method = NULL, distance = "glm")
 summary(m.out0)
 ```
-### Balance w/ offshore blocks removed
 
-```{r}
-blocks <- wcfish::blocks
-
-offshore_id <- blocks %>%
-  sf::st_drop_geometry() %>% 
-  filter(block_type == "Offshore") 
-
-data3 <- data2 %>% 
-  filter(!(block_id %in% offshore_id$block_id))
-```
-
-```{r}
-m.out1 <- matchit(block_treatment ~ block_area_km2 + block_mean_depth_fa + 
-                    distance_to_shore_km + dist_to_port_km,
-                  data = data3, method = NULL, distance = "glm")
-summary(m.out1)
-```
 ### Matching
 
 ```{r}
-# Original (all) blocks
 m.out2 <- matchit(block_treatment ~ block_area_km2 + block_mean_depth_fa + 
-                    distance_to_shore_km + dist_to_port_km,
-                  data = data2, 
-                  method = "nearest", 
-                  distance = "glm")
-summary(m.out2)
-
-# Offshore blocks removed
-m.out3 <- matchit(block_treatment ~ block_area_km2 + block_mean_depth_fa + 
                     distance_to_shore_km + dist_to_port_km,
                   data = data3, 
                   method = "nearest", 
                   distance = "glm")
+summary(m.out2)
+
+summary(m.out2, un = FALSE)
+
+plot(m.out2, type = "jitter", interactive = FALSE)
+
+plot(m.out2, type = "qq", interactive = FALSE)
+
+plot(summary(m.out2))
+```
+
+### Matching with added proximity
+
+```{r}
+m.out3 <- matchit(block_treatment ~ block_area_km2 + block_mean_depth_fa + 
+                    distance_to_shore_km + dist_to_port_km + block_lat_dd + block_long_dd,
+                  data = data4, 
+                  method = "nearest", 
+                  distance = "glm")
 summary(m.out3)
-```
 
-```{r}
 summary(m.out3, un = FALSE)
-```
-```{r}
-plot(m.out3, type = "jitter", interactive = FALSE)
-```
 
-```{r}
+plot(m.out3, type = "jitter", interactive = FALSE)
+
 plot(m.out3, type = "qq", interactive = FALSE)
 
+plot(summary(m.out3))
 ```
 
-Require neighbor or not
-Once with replacement or not
+
+# Once with replacement or not
+
+```{r}
+m.out4 <- matchit(block_treatment ~ block_area_km2 + block_mean_depth_fa + 
+                    distance_to_shore_km + dist_to_port_km + block_lat_dd + block_long_dd,
+                  data = data4, 
+                  method = "full", 
+                  distance = "glm")
+summary(m.out4)
+
+plot(m.out4, type = "jitter", interactive = FALSE)
+
+plot(m.out4, type = "qq", interactive = FALSE)
+
+plot(summary(m.out4))
+```
+```{r}
+
+
+```
+
