--- a/analyses/5community_climate_ecology/analyses/Step_2_NMDS.Rmd
+++ b/analyses/5community_climate_ecology/analyses/Step_2_NMDS.Rmd
@@ -9,6 +9,7 @@ output: html_document
 
 #load packages
 ```{r}
+rm(list=ls())
 require(tidyverse)
 require(stringr)
 require(janitor)
@@ -60,80 +61,6 @@ rocky_counts <- read.csv(file.path(data_path, input_file))%>%
                     filter(region4=='central')
 
 ```
-
-
-#OLD -- test ordinate across YEARS and regions
-```{r, eval=FALSE}
-
-# CCFRP_test <- CCFRP 
-# 
-# year <- as.numeric(CCFRP_test$year)
-# region <- CCFRP_test$region4
-# mpa_designation <- CCFRP_test$mpa_designation
-# 
-# CCFRP_test <- CCFRP_test%>%
-#               dplyr::select(10:ncol(.))
-# 
-# CCFRP_relative <- decostand(CCFRP_test, method = "total") #convert absolute abundance to relative abundance
-#               
-# distmat <- 
-#     vegdist(CCFRP_relative, method = "eucl") #generates a euclidean based distance matrix
-# 
-# 
-# ord <- metaMDS(distmat, distance="eucl") #ordinates the dist matrix
-# 
-# 
-# 
-# plot(ord)
-# ordiellipse(ord, year)
-# ordispider(ord, year, label=F)
-# 
-# 
-# 
-# scrs <- scores(ord)
-# 
-# scrs <- cbind(as.data.frame(scrs), year, region, mpa_designation) #to facilitate computing centroids, add group var
-# scrs$region <- factor(scrs$region, level = c("north","central","north islands","south")) #set order
-# scrs$mpa_designation <- factor(scrs$mpa_designation, level = c("smr","ref")) #set order
-# 
-# 
-# cent <- aggregate(cbind(NMDS1, NMDS2) ~ year+region+mpa_designation, data = scrs, FUN = mean) #computes centroids by MHW and region
-# 
-# segs <- merge(scrs, setNames(cent, c('year','oNMDS1','oNMDS2')),
-#               by = 'year', sort=FALSE) #to draw the spider, we need to use geom_segment() which required coordinates to draw the segment from and to. Our 'to'
-#                                        # coordinates, the xend and yend aesthetics will be the centroids. So we need to replicate the group centroid for each
-#                                        # observation in the group. T
-# 
-# 
-# 
-# 
-# ggplot(scrs, aes(x = NMDS1, y=NMDS2, shape = region, color = mpa_designation, group=region)) +
-#   #geom_segment(data = segs,
-#                #mapping = aes(xend = oNMDS1, yend = oNMDS2)) + #spiders
-#   geom_point(data = cent, size=5) +                           #centroids
-#   geom_path(data = cent, size = 0.5, #aes(color=year)
-#             )+           #line connecting groups (years)
-#   #geom_point() +                                              #sample scores
-#   #coord_fixed() +
-#   geom_text(data=cent, aes(label=year), position=position_jitter(width=0.02, height=0.01))+
-#   #xlim(-4.5,4.5)+
-#   #ylim(-0.45,0.65)+
-#   facet_wrap(~mpa_designation,
-#              labeller = labeller(mpa_designation =
-#                                    c("ref"="REF",
-#                                      "smr"="SMR")))+
-#   ggtitle("CCFRP assemblage structure over time")+
-#   theme(strip.text = element_text(size=18, face="bold"))+
-#   theme(plot.title = element_text(size=20, face="bold"))+
-#   theme(text = element_text(20))
-#   
-#   #theme(legend.position='none')
-# 
-
-```
-
-
-
 
 
 
@@ -349,21 +276,31 @@ rocky_distmat <-
 
 
 #save group vars
-#data_path <- "/home/shares/ca-mpa/data/sync-data/processed_data/ecological_community_data/year_level"
+#data_path <- "/home/shares/ca-mpa/data/sync-data/monitoring/processed_data/ecological_community_data/year_level_with_envr_vars"
 #save(CCFRP_group_vars,kelp_swath_group_vars,kelp_upc_group_vars,kelp_fish_group_vars,
 #   deep_reef_group_vars,rocky_group_vars,
-#    file = file.path(data_path, "group_vars.rds"))
+#    file = file.path(data_path, "group_vars.rda"))
 
+#save envr vars 
+#data_path <- "/home/shares/ca-mpa/data/sync-data/monitoring/processed_data/ecological_community_data/year_level_with_envr_vars"
+#save(CCFRP_envr_vars,kelp_swath_envr_vars,kelp_upc_envr_vars,kelp_fish_envr_vars,
+#  deep_reef_envr_vars,
+#    file = file.path(data_path, "envr_vars.rda"))
 
 #save distance matrices
-#data_path <- "/home/shares/ca-mpa/data/sync-data/processed_data/ecological_community_data/year_level"
+#data_path <- "/home/shares/ca-mpa/data/sync-data/monitoring/processed_data/ecological_community_data/year_level_with_envr_vars"
 #save(CCFRP_distmat,kelp_swath_distmat,kelp_upc_distmat,kelp_fish_distmat,
 #     deep_reef_distmat,rocky_distmat,
 #     file = file.path(data_path, "distance_matrices_BC.rda"))
 
 
-
 ```
+
+
+
+**DO NOT CHANGE ORDER BEYOND THIS POINT UNLESS GROUP VARS, ENVR VARS, **
+**AND DISTANCE MATRICES ARE COMBINED AND SORTED FIRST**
+
 
 
 ## ordinate all datasets. NOTE: THIS CHUNK TAKES A LOT OF COMPUTATION TIME. Resulting objects are exported as .Rdata
@@ -408,7 +345,7 @@ message("Done processing rocky_ord")
 
 
 #export to .RData
-#data_path <- "/home/shares/ca-mpa/data/sync-data/processed_data/ecological_community_data/year_level"
+#data_path <- "/home/shares/ca-mpa/data/sync-data/monitoring/processed_data/ecological_community_data/year_level_with_envr_vars"
 #save(CCFRP_ord, kelp_swath_ord, kelp_fish_ord, kelp_upc_ord, deep_reef_ord, rocky_ord, file = file.path(data_path, "bray_nmds_scores.rda"))
 
 ```
