--- a/analyses/5community_climate_ecology/analyses/Step_2_NMDS.Rmd
+++ b/analyses/5community_climate_ecology/analyses/Step_2_NMDS.Rmd
@@ -281,6 +281,13 @@ rocky_distmat <-
 #   deep_reef_group_vars,rocky_group_vars,
 #    file = file.path(data_path, "group_vars.rda"))
 
+#save community matrices
+#data_path <- "/home/shares/ca-mpa/data/sync-data/monitoring/processed_data/ecological_community_data/year_level_with_envr_vars"
+#save(CCFRP_ord_data,kelp_swath_ord_data,kelp_upc_ord_data,kelp_fish_ord_data,
+#   deep_reef_ord_data,rocky_ord_data,
+#    file = file.path(data_path, "comm_data.rda"))
+
+
 #save envr vars 
 #data_path <- "/home/shares/ca-mpa/data/sync-data/monitoring/processed_data/ecological_community_data/year_level_with_envr_vars"
 #save(CCFRP_envr_vars,kelp_swath_envr_vars,kelp_upc_envr_vars,kelp_fish_envr_vars,
@@ -292,6 +299,7 @@ rocky_distmat <-
 #save(CCFRP_distmat,kelp_swath_distmat,kelp_upc_distmat,kelp_fish_distmat,
 #     deep_reef_distmat,rocky_distmat,
 #     file = file.path(data_path, "distance_matrices_BC.rda"))
+
 
 
 ```
@@ -348,17 +356,26 @@ message("Done processing rocky_ord")
 #data_path <- "/home/shares/ca-mpa/data/sync-data/monitoring/processed_data/ecological_community_data/year_level_with_envr_vars"
 #save(CCFRP_ord, kelp_swath_ord, kelp_fish_ord, kelp_upc_ord, deep_reef_ord, rocky_ord, file = file.path(data_path, "bray_nmds_scores.rda"))
 
+#data_path <- "/home/shares/ca-mpa/data/sync-data/monitoring/processed_data/ecological_community_data/year_level_with_envr_vars"
+#save(CCFRP_en, kelp_swath_en, kelp_fish_en, kelp_upc_en, deep_reef_en, rocky_ord, file = file.path(data_path, "env_fit_scores.rda"))
+
 ```
 
+
+#load scores
+```{r}
+#data_path <- "/home/shares/ca-mpa/data/sync-data/monitoring/processed_data/ecological_community_data/year_level_with_envr_vars"
+#scores <- "bray_nmds_scores.rda"
+#envr <- "envr_vars.rda"
+#group <- "group_vars.rda"
+#load(file.path(data_path, scores))
+#load(file.path(data_path, envr))
+#load(file.path(data_path, group))
+```
 
 
 #CCFRP scores and plot
 ```{r}
-
-#data_path <- "/home/shares/ca-mpa/data/sync-data/processed_data/ecological_community_data/"
-#input_file <- "bray_nmds_scores.rda"
-
-#data <- load(file.path(data_path, input_file))
 
 
 scrs <- as.data.frame(scores(CCFRP_ord, display="site"))
@@ -418,13 +435,15 @@ CCFRP<- ggplot(data=cent, aes(NMDS1, NMDS2)) +
        data = en_coord_cont, size =0.5, alpha = 0.5,
        arrow = arrow(length = unit(0.25, "cm")), colour = "grey50", lwd=0.5)+
      geom_text(data = en_coord_cont, aes(x = (NMDS1), y = (NMDS2)), colour = "black", 
-       fontface = "bold", label = row.names(en_coord_cont), position=position_jitter(width=0.02,height=0.01), size=4) + 
+       fontface = "bold", label = row.names(en_coord_cont), position=position_jitter(width=0.02,height=0.02), size=4) + 
   ggtitle("CCFRP")+
   scale_color_manual(values=c('#44b89d','#f56969','#4c78b5'))+
-  theme(strip.text = element_text(size=18, face="bold"))+
-  theme(plot.title = element_text(size=16, face="bold"))+
+  theme(strip.text = element_text(size=12, face="bold"))+
+  theme(plot.title = element_text(size=14, face="bold"))+
   labs(shape="site type",color='heatwave period') +
-  theme(text = element_text(24))
+  theme(text = element_text(18))+
+  theme_classic()
+ 
 
 
 print(CCFRP)
@@ -437,7 +456,7 @@ print(CCFRP)
 
 #get NMDS scores
 scrs <- as.data.frame(scores(kelp_swath_ord, display="site"))
-en_coord_cont = as.data.frame(scores(kelp_swath_en, "vectors")) * ordiArrowMul(kelp_swath_en, fill=0.6)
+en_coord_cont = as.data.frame(scores(kelp_swath_en, "vectors")) * ordiArrowMul(kelp_swath_en, fill=0.3)
 
 scrs <- cbind(as.data.frame(scrs), desig_state=kelp_swath_group_vars$desig_state, year=kelp_swath_group_vars$year, region4=kelp_swath_group_vars$region4, mpa_designation=kelp_swath_group_vars$mpa_defacto_designation, MHW=kelp_swath_group_vars$MHW) #to facilitate computing centroids, add group var
 
@@ -483,14 +502,14 @@ kelp_swath<- ggplot(data=cent, aes(NMDS1, NMDS2)) +
        data = en_coord_cont, size =0.5, alpha = 0.5,
        arrow = arrow(length = unit(0.25, "cm")), colour = "grey50", lwd=0.5)+
      geom_text(data = en_coord_cont, aes(x = (NMDS1), y = (NMDS2)), colour = "black", 
-       fontface = "bold", label = row.names(en_coord_cont), position=position_jitter(width=0.01,height=0.01), size=4) + 
+       fontface = "bold", label = row.names(en_coord_cont), position=position_jitter(width=0.02,height=0.02), size=4) + 
   ggtitle("kelp swath")+
   scale_color_manual(values=c('#44b89d','#f56969','#4c78b5'))+
-  theme(strip.text = element_text(size=18, face="bold"))+
-  theme(plot.title = element_text(size=16, face="bold"))+
+  theme(strip.text = element_text(size=12, face="bold"))+
+  theme(plot.title = element_text(size=14, face="bold"))+
   labs(shape="site type",color='heatwave period') +
-  theme(text = element_text(24))
-
+  theme(text = element_text(18))+
+  theme_classic()
 
 print(kelp_swath)
 
@@ -541,13 +560,14 @@ kelp_upc<- ggplot(data=cent, aes(NMDS1, NMDS2)) +
        data = en_coord_cont, size =0.5, alpha = 0.5,
        arrow = arrow(length = unit(0.25, "cm")), colour = "grey50", lwd=0.5)+
      geom_text(data = en_coord_cont, aes(x = (NMDS1), y = (NMDS2)), colour = "black", 
-       fontface = "bold", label = row.names(en_coord_cont), position=position_jitter(width=0.01,height=0.01), size=4) + 
+       fontface = "bold", label = row.names(en_coord_cont), position=position_jitter(width=0.02,height=0.01), size=4) + 
   ggtitle("kelp upc")+
   scale_color_manual(values=c('#44b89d','#f56969','#4c78b5'))+
-  theme(strip.text = element_text(size=18, face="bold"))+
-  theme(plot.title = element_text(size=16, face="bold"))+
+  theme(strip.text = element_text(size=12, face="bold"))+
+  theme(plot.title = element_text(size=14, face="bold"))+
   labs(shape="site type",color='heatwave period') +
-  theme(text = element_text(24))
+  theme(text = element_text(18))+
+  theme_classic()
 
 
 print(kelp_upc)
@@ -606,10 +626,11 @@ kelp_fish<- ggplot(data=cent, aes(NMDS1, NMDS2)) +
        fontface = "bold", label = row.names(en_coord_cont), position=position_jitter(width=0.01,height=0.01), size=4) + 
   ggtitle("kelp fish")+
   scale_color_manual(values=c('#44b89d','#f56969','#4c78b5'))+
-  theme(strip.text = element_text(size=18, face="bold"))+
-  theme(plot.title = element_text(size=16, face="bold"))+
+  theme(strip.text = element_text(size=12, face="bold"))+
+  theme(plot.title = element_text(size=14, face="bold"))+
   labs(shape="site type",color='heatwave period') +
-  theme(text = element_text(24))
+  theme(text = element_text(18))+
+  theme_classic()
 
 
 print(kelp_fish)
@@ -669,14 +690,14 @@ deep_reef<- ggplot(data=cent, aes(NMDS1, NMDS2)) +
        fontface = "bold", label = row.names(en_coord_cont), position=position_jitter(width=0.01,height=0.01), size=4) + 
   ggtitle("deep reef")+
   scale_color_manual(values=c('#44b89d','#f56969','#4c78b5'))+
-  theme(strip.text = element_text(size=18, face="bold"))+
-  theme(plot.title = element_text(size=16, face="bold"))+
+  theme(strip.text = element_text(size=12, face="bold"))+
+  theme(plot.title = element_text(size=14, face="bold"))+
   labs(shape="site type",color='heatwave period') +
-  theme(text = element_text(24))
+  theme(text = element_text(18))+
+  theme_classic()
 
 
 print(deep_reef)
-
 
 
 ```
@@ -732,10 +753,11 @@ rocky<- ggplot(data=cent, aes(NMDS1, NMDS2)) +
   #     fontface = "bold", label = row.names(en_coord_cont), position=position_jitter(width=0.01,height=0.01)) + 
   ggtitle("rocky intertidal")+
   scale_color_manual(values=c('#44b89d','#f56969','#4c78b5'))+
-  theme(strip.text = element_text(size=18, face="bold"))+
-  theme(plot.title = element_text(size=16, face="bold"))+
+  theme(strip.text = element_text(size=12, face="bold"))+
+  theme(plot.title = element_text(size=14, face="bold"))+
   labs(shape="site type",color='heatwave period') +
-  theme(text = element_text(24))
+  theme(text = element_text(18))+
+  theme_classic()
 
 
 print(rocky)
@@ -744,22 +766,52 @@ print(rocky)
 
 #combine plots 
 
+#cowplot test
 ```{r}
+prow <- plot_grid(
+  CCFRP + theme(legend.position="none"),
+  kelp_fish + theme(legend.position="none"),
+  deep_reef + theme(legend.position="none"),
+  kelp_swath + theme(legend.position="none"),
+  kelp_upc + theme(legend.position="none"),
+  rocky + theme(legend.position="none"))
+prow
+
+# extract the legend from one of the plots
+legend <- get_legend(
+  # create some space to the left of the legend
+  CCFRP + theme(legend.box.margin = margin(0, 0, 0, 12))
+)
+
+# add the legend to the row we made earlier. Give it one-third of 
+# the width of one plot (via rel_widths).
+figure_test <- plot_grid(prow, legend, rel_widths = c(3,1))
+print(figure_test)
+
+
+cowplot::save_plot(here::here("analyses", "5community_climate_ecology", "figures", "community_structure_central.png"), figure_test, bg="white",dpi = 600, units = "in")
+
+
+#ggsave(here::here("analyses", "5community_climate_ecology", "figures", "community_structure_central.png"), figure_test, width=10, bg="white",dpi = 600, units = "in")
+
+```
+
+```{r}
+figure_test <- plot_grid(CCFRP, kelp_fish, deep_reef,
+          kelp_swath, kelp_upc, rocky)
 
 figure<-ggarrange(CCFRP, kelp_fish, deep_reef,
           kelp_swath, kelp_upc, rocky, common.legend = TRUE, legend="right",
-          font.label=list(color="black",size=24)) + bgcolor('white')
+          font.label=list(color="black",size=4)) + bgcolor('white')  
+          #+coord_fixed(ratio=0.5)
 
-annotate_figure(figure,
-                top = text_grob("central CA community structure", color = "black", face = "bold", size = 20)
-                #bottom = text_grob("Data source: \n ToothGrowth data set", color = "blue",
-                                  # hjust = 1, x = 1, face = "italic", size = 10),
-                #left = text_grob("Tooth length", color = "green", rot = 90),
-                #right = "I'm done, thanks :-)!",
-                #fig.lab = "Figure 1", fig.lab.face = "bold"
-)
+#annotate_figure(figure,
+#                top = text_grob("central CA community structure", color = "black", face = "bold", size = 8)
+#)
 
-#ggsave(here::here("analyses", "5community_climate_ecology", "figures", "community_structure_central.png"), figure, width = 14, units = "in", dpi = 300)
+print(figure)
+
+#ggsave(here::here("analyses", "5community_climate_ecology", "figures", "community_structure_central.png"), figure, height=8, width=15, bg="white", dpi = 600, units = "in")
 ```
 
 
@@ -831,6 +883,8 @@ points(cent_year[, -1], pch = 22, col='blue', bg = c("red","blue","green"), cex 
 
 
 
+
+
 **Part 1.2 -- Calculate Centroid Distance**
 #CCFRP_centroid distance
 ```{r}
@@ -884,7 +938,7 @@ CCFRP_distmat_ref <- vegdist(CCFRP_rel_ref, method = "bray", na.rm=T)
 ```{r}
 
 kelp_swath <- kelp_swath %>%
-                  rowwise() %>%
+                  dplyr::rowwise() %>%
                   dplyr::mutate(sum = sum(across(9:ncol(.)), na.rm = T)) %>%
                   filter(!(sum==0))%>%
                   dplyr::select(-sum) #remove rows containing only zeros
